# Protea

./: CMakeLists.txt
cmake/: dependencies.cmake  softfloat.cmake
code_gen/: cpp_gen.rb
lib/: ir_gen.rb
lib/ADL/: builder.rb  scope.rb  value.rb  var.rb
lib/Utility/: fp_helper_cpp.rb  helper_cpp.rb  type.rb
sema_gen/: cpp_gen.rb
ser2ruby/: base2ruby.rb
sim_gen/: CMakeLists.txt  sim_gen.rb
sim_gen/CPUState/: cpu_state.rb
sim_gen/Decoders/: decoder.rb
sim_gen/ExecEngines/: base_exec_engine.rb  llvm_jit.rb  naive_interpreter.rb
sim_gen/ISA/: isa.rb
sim_gen/Utility/: sim_utility.rb
sim_lib/: CMakeLists.txt  base_jit.cc  base_jit.hh  sim.cc
tests/: CMakeLists.txt
tests/rv64f/: rv64f_tests.cc
